# DeOne

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflow/: type-check.yml
src/: core.py  functions.py  main.py  util.py
tests/: core_test.py
