[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
]

[tool.mypy]
files = ["src/**/*.py"]  # This tells mypy to check all Python files under src/
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
