[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
]

[tool.mypy]
files = ["src/**/*.py"]  # This tells mypy to check all Python files under src/
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true

[tool.ruff]
lint.select = [
    "E",   # pycodestyle errors (basic Python style)
    "F",   # pyflakes (logical errors)
    "I",   # isort (import sorting)
    "N",   # pep8-naming (naming conventions)
    "RUF", # ruff-specific rules
    "B",   # bugbear (catches common bugs)
    "UP",  # pyupgrade (modernize Python code)
    "NPY", # numpy-specific rules
    "PT",  # pytest rules
    "C90", # complexity checking
]

# Common issues to ignore for ML/research code
lint.ignore = [
    "E741",    # Ambiguous variable names (l, I, O) - common in ML
    "N803",    # Argument name should be lowercase (conflicts with common ML conventions like X, Y)
    "N806",    # Variable in function should be lowercase (conflicts with common ML variables like X_train)
    "B008",    # Do not perform function calls in argument defaults (common pattern with torch.Tensor)
]

line-length = 88  # Black's default
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["N802", "N803", "N806"]  # Allow uppercase test names
"__init__.py" = ["F401"]                 # Ignore unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"